# OxiCloud

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.rootless  LICENSE  README.md  SECURITY.md  TODO-LIST.md  TRASH-FEATURE-SUMMARY.md  apply-migration.sh  apply-migrations.sh  check-db.sh  check-frontend.py  docker-compose-migration.yml  docker-compose.yml  fix-userrole.sql  rootless-compose.yml  run-trash-test.sh  server_log.txt  test-all-routes.py  test-api-integration.py  test-api.sh  test-folder-simple.sh  test-folder.sh  test-trash.sh  test-upload.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md
benches/: file_operations.rs
db/: schema.sql
doc/: LTO-OPTIMIZATIONS.md  README-AUTH.md  SHARE-INTEGRATION.md
migrations/: 20240320_create_auth_schema.sql  20240323_add_userrole_type.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dtos/: file_dto.rs  folder_dto.rs  i18n_dto.rs  mod.rs  pagination.rs  search_dto.rs  share_dto.rs  trash_dto.rs  user_dto.rs
src/application/ports/: auth_ports.rs  file_ports.rs  inbound.rs  mod.rs  outbound.rs  share_ports.rs  storage_ports.rs  trash_ports.rs
src/application/services/: auth_application_service.rs  batch_operations.rs  file_management_service.rs  file_retrieval_service.rs  file_service.rs  file_upload_service.rs  file_use_case_factory.rs  folder_service.rs  i18n_application_service.rs  mod.rs  search_service.rs  share_service.rs  storage_mediator.rs  trash_service.rs  trash_service_test.rs
src/application/transactions/: mod.rs  storage_transaction.rs
src/common/: auth_factory.rs  cache.rs  config.rs  db.rs  di.rs  errors.rs  mod.rs
src/domain/entities/: file.rs  folder.rs  mod.rs  session.rs  share.rs  trashed_item.rs  user.rs
src/domain/repositories/: file_repository.rs  folder_repository.rs  mod.rs  session_repository.rs  share_repository.rs  trash_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  i18n_service.rs  mod.rs  path_service.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: file_fs_read_repository.rs  file_fs_repository.rs  file_fs_repository_trash.rs  file_fs_write_repository.rs  file_metadata_manager.rs  file_path_resolver.rs  folder_fs_repository.rs  folder_fs_repository_trash.rs  mod.rs  parallel_file_processor.rs  share_fs_repository.rs  trash_fs_repository.rs
src/infrastructure/repositories/pg/: mod.rs  session_pg_repository.rs  user_pg_repository.rs
src/infrastructure/services/: buffer_pool.rs  cache_manager.rs  compression_service.rs  file_metadata_cache.rs  file_system_i18n_service.rs  id_mapping_optimizer.rs  id_mapping_service.rs  mod.rs  trash_cleanup_service.rs
src/interfaces/: mod.rs
src/interfaces/api/: mod.rs  routes.rs
src/interfaces/api/handlers/: auth_handler.rs  batch_handler.rs  file_handler.rs  folder_handler.rs  i18n_handler.rs  mod.rs  search_handler.rs  share_handler.rs  trash_handler.rs
src/interfaces/middleware/: auth.rs  cache.rs  mod.rs  redirect.rs  test_cache.rs
src/interfaces/web/: mod.rs
static/: identifier.sh  index.html  login.html  shared.html  sw.js  test.html
static/css/: auth.css  style.css
static/js/: app.js  auth.js  contextMenus.js  fileOperations.js  fileRenderer.js  fileSharing.js  i18n.js  languageSelector.js  search.js  shared.js  ui.js
static/locales/: en.json  es.json  ja.json  zh-hant.json
storage/: file_ids.json  folder_ids.json  test-file-1742996763.txt  test-file-1742996824.txt  test-file-1742996903.txt  test-file-1742997430.txt  test-file.md
storage/prueba3/: folder_ids.json
storage/prueba4/: file_ids.json  folder_ids.json
storage/uploads/: api-test-file.txt  technical-documentation.md  test-all-routes.py  test-upload.txt
tests/: README.md  check-trash-dirs.sh  debug-trash.py  direct-upload-test.py  fix-trash-index.sh  simulate-id-mapping.py  test-all-routes.py  test-api-file.txt  test-auth-api.sh  test-auth-env.sh  test-compile-trash.sh  test-create-folder.sh  test-delete-file.py  test-folder.js  test-trash-api-simple.py  test-trash-api.py  test-trash-api.sh  test-trash-simple.sh  test-upload.sh
